Cleanup hieradata to reduce Puppet warnings
Some puppet parameters were deprecated, some of them removed.
This patch reduce the number of warnings to a few, and the rest of
warnings are bugs that are in progress by Puppet OpenStack team.

This patch is mostly some cleanup so we don't have useless warnings in
Puppet catalog.

Changes:
* Update Ceilometer auth params
* Update Neutron auth params
* Update Heat auth params
* Update Swift hash suffix param
* Remove neutron::server::notifications::nova_url, useless.

Change-Id: Ie32681a1fe32735f70ba372630da09f91227298c

--- a/puppet/compute.yaml
+++ b/puppet/compute.yaml
@@ -545,7 +545,7 @@ resources:
                 ceilometer::rabbit_password: {get_input: rabbit_password}
                 ceilometer::rabbit_use_ssl: {get_input: rabbit_client_use_ssl}
                 ceilometer::rabbit_port: {get_input: rabbit_client_port}
-                ceilometer::metering_secret: {get_input: ceilometer_metering_secret}
+                ceilometer::telemetry_secret: {get_input: ceilometer_metering_secret}
                 ceilometer::agent::auth::auth_password: {get_input: ceilometer_password}
                 ceilometer::agent::auth::auth_url: {get_input: ceilometer_agent_auth_url}
                 ceilometer_compute_agent: {get_input: ceilometer_compute_agent}
