--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -1189,7 +1189,7 @@ resources:
                 # FIXME: need to move proxy_local_net_ip into swift-proxy.yaml
                 swift::proxy::proxy_local_net_ip: {get_input: swift_proxy_network}
                 swift::storage::all::storage_local_net_ip: {get_input: swift_management_network}
-                swift::swift_hash_suffix: {get_input: swift_hash_suffix}
+                swift::swift_hash_path_suffix: {get_input: swift_hash_suffix}
                 tripleo::ringbuilder::build_ring: { get_input: swift_ring_build }
                 tripleo::ringbuilder::part_power: {get_input: swift_part_power}
                 tripleo::ringbuilder::replicas: {get_input: swift_replicas}
@@ -1264,7 +1264,7 @@ resources:
                 # Neutron
                 neutron::bind_host: {get_input: neutron_api_network}
                 neutron::server::auth_uri: {get_input: keystone_auth_uri}
-                neutron::server::identity_uri: {get_input: keystone_identity_uri}
+                neutron::server::auth_url: {get_input: keystone_identity_uri}
                 neutron::server::database_connection: {get_input: neutron_dsn}
                 neutron::server::api_workers: {get_input: neutron_workers}
                 neutron::network_device_mtu: {get_input: neutron_tenant_mtu}
@@ -1294,7 +1294,7 @@ resources:
                 neutron::plugins::ml2::tenant_network_types: {get_input: neutron_tenant_network_types}
                 neutron::agents::ml2::ovs::tunnel_types: {get_input: neutron_tunnel_types}
                 neutron::agents::ml2::ovs::extensions: {get_input: neutron_agent_extensions}
-                neutron::server::auth_password: {get_input: neutron_password}
+                neutron::server::password: {get_input: neutron_password}
                 neutron_dsn: {get_input: neutron_dsn}
                 neutron::db::mysql::password: {get_input: neutron_password}
                 neutron::keystone::auth::public_url: {get_input: neutron_public_url }
@@ -1302,7 +1302,6 @@ resources:
                 neutron::keystone::auth::admin_url: {get_input: neutron_admin_url }
                 neutron::keystone::auth::password: {get_input: neutron_password }
                 neutron::keystone::auth::region: {get_input: keystone_region}
-                neutron::server::notifications::nova_url: {get_input: nova_internal_url}
                 neutron::server::notifications::auth_url: {get_input: neutron_auth_url}
                 neutron::server::notifications::tenant_name: 'service'
                 neutron::server::notifications::project_name: 'service'
@@ -1311,7 +1310,7 @@ resources:
                 # Ceilometer
                 ceilometer_backend: {get_input: ceilometer_backend}
                 ceilometer_mysql_conn_string: {get_input: ceilometer_dsn}
-                ceilometer::metering_secret: {get_input: ceilometer_metering_secret}
+                ceilometer::telemetry_secret: {get_input: ceilometer_metering_secret}
                 ceilometer::rabbit_userid: {get_input: rabbit_username}
                 ceilometer::rabbit_password: {get_input: rabbit_password}
                 ceilometer::rabbit_use_ssl: {get_input: rabbit_client_use_ssl}
@@ -1319,8 +1318,8 @@ resources:
                 ceilometer::debug: {get_input: debug}
                 ceilometer::api::host: {get_input: ceilometer_api_network}
                 ceilometer::api::keystone_password: {get_input: ceilometer_password}
-                ceilometer::api::keystone_auth_uri: {get_input: keystone_auth_uri}
-                ceilometer::api::keystone_identity_uri: {get_input: keystone_identity_uri}
+                ceilometer::api::auth_uri: {get_input: keystone_auth_uri}
+                ceilometer::api::identity_uri: {get_input: keystone_identity_uri}
                 ceilometer::agent::auth::auth_password: {get_input: ceilometer_password}
                 ceilometer::agent::auth::auth_url: {get_input: keystone_auth_uri}
                 ceilometer::agent::central::coordination_url: {get_input: ceilometer_coordination_url}
