--- a/puppet/hieradata/common.yaml
+++ b/puppet/hieradata/common.yaml
@@ -17,6 +17,7 @@ nova::network::neutron::neutron_username: 'neutron'
 nova::network::neutron::dhcp_domain: ''
 
 neutron::allow_overlapping_ips: true
+neutron::server::project_name: 'service'
 
 kernel_modules:
   nf_conntrack: {}
