--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -143,6 +143,7 @@ heat::cron::purge_deleted::destination: '/dev/null'
 heat::keystone::domain::domain_name: 'heat_stack'
 heat::keystone::domain::domain_admin: 'heat_stack_domain_admin'
 heat::keystone::domain::domain_admin_email: 'heat_stack_domain_admin@localhost'
+heat::auth_plugin: 'password'
 
 # pacemaker
 pacemaker::corosync::cluster_name: 'tripleo_cluster'
