--- a/puppet/swift-storage.yaml
+++ b/puppet/swift-storage.yaml
@@ -279,7 +279,7 @@ resources:
             object:
               raw_data: {get_file: hieradata/object.yaml}
               mapped_data: # data supplied directly to this deployment configuration, etc
-                swift::swift_hash_suffix: { get_input: swift_hash_suffix }
+                swift::swift_hash_path_suffix: { get_input: swift_hash_suffix }
                 tripleo::ringbuilder::build_ring: { get_input: swift_ring_build }
                 tripleo::ringbuilder::part_power: { get_input: swift_part_power }
                 tripleo::ringbuilder::replicas: {get_input: swift_replicas }
