--- a/puppet/hieradata/compute.yaml
+++ b/puppet/hieradata/compute.yaml
@@ -1,5 +1,6 @@
 # Hiera data here applies to all compute nodes
 
+nova::host: "%{::fqdn}"
 nova::notify_on_state_change: 'vm_and_task_state'
 nova::notification_driver: messagingv2
 nova::compute::enabled: true
