--- a/environments/major-upgrade-pacemaker-init.yaml
+++ b/environments/major-upgrade-pacemaker-init.yaml
@@ -1,5 +1,5 @@
 parameter_defaults:
-  UpgradeLevelNovaCompute: liberty
+  UpgradeLevelNovaCompute: mitaka
 
 resource_registry:
   OS::TripleO::Tasks::UpdateWorkflow: ../extraconfig/tasks/major_upgrade_pacemaker_init.yaml
