--- a/environments/tls-everywhere-endpoints-dns.yaml
+++ b/environments/tls-everywhere-endpoints-dns.yaml
@@ -34,6 +34,9 @@ parameter_defaults:
     ManilaAdmin: {protocol: 'https', port: '8786', host: 'CLOUDNAME'}
     ManilaInternal: {protocol: 'https', port: '8786', host: 'CLOUDNAME'}
     ManilaPublic: {protocol: 'https', port: '13786', host: 'CLOUDNAME'}
+    MistralAdmin: {protocol: 'https', port: '8989', host: 'CLOUDNAME'}
+    MistralInternal: {protocol: 'https', port: '8989', host: 'CLOUDNAME'}
+    MistralPublic: {protocol: 'https', port: '13989', host: 'CLOUDNAME'}
     MysqlInternal: {protocol: 'mysql+pymysql', port: '3306', host: 'CLOUDNAME'}
     NeutronAdmin: {protocol: 'https', port: '9696', host: 'CLOUDNAME'}
     NeutronInternal: {protocol: 'https', port: '9696', host: 'CLOUDNAME'}
