--- a/network/endpoints/endpoint_data.yaml
+++ b/network/endpoints/endpoint_data.yaml
@@ -148,6 +148,21 @@ Manila:
             V1: /v1/%(tenant_id)s
     port: 8786
 
+Mistral:
+    Internal:
+        net_param: MistralApi
+        uri_suffixes:
+            '': /v2
+    Public:
+        net_param: Public
+        uri_suffixes:
+            '': /v2
+    Admin:
+        net_param: MistralApi
+        uri_suffixes:
+            '': /v2
+    port: 8989
+
 Neutron:
     Internal:
         net_param: NeutronApi
