Explode Loadbalancer role into HAproxy + keepalived
Split Loadbalancer into HAproxy & Keepalived roles.

Depends-On: I8aa9045fc80205485abab723968b26084f60bf71
Change-Id: If2723358099e78052c351a4a45fdf01d116a89df

--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -136,7 +136,8 @@ resource_registry:
   OS::TripleO::Services::NeutronL3Agent: puppet/services/neutron-l3.yaml
   OS::TripleO::Services::NeutronMetadataAgent: puppet/services/neutron-metadata.yaml
   OS::TripleO::Services::RabbitMQ: puppet/services/rabbitmq.yaml
-  OS::TripleO::Services::Loadbalancer: puppet/services/loadbalancer.yaml
+  OS::TripleO::Services::HAproxy: puppet/services/haproxy.yaml
+  OS::TripleO::Services::Keepalived: puppet/services/keepalived.yaml
   OS::TripleO::Services::Memcached: puppet/services/memcached.yaml
   OS::TripleO::Services::SwiftProxy: puppet/services/swift-proxy.yaml
   OS::TripleO::Services::SaharaApi: puppet/services/sahara-api.yaml
