--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -637,7 +637,8 @@ parameters:
       - OS::TripleO::Services::NeutronL3Agent
       - OS::TripleO::Services::NeutronMetadataAgent
       - OS::TripleO::Services::RabbitMQ
-      - OS::TripleO::Services::Loadbalancer
+      - OS::TripleO::Services::HAproxy
+      - OS::TripleO::Services::Keepalived
       - OS::TripleO::Services::Memcached
       - OS::TripleO::Services::SwiftProxy
       - OS::TripleO::Services::Redis
