--- a/puppet/services/keepalived.yaml
+++ b/puppet/services/keepalived.yaml
@@ -1,7 +1,7 @@
 heat_template_version: 2016-04-08
 
 description: >
-  Loadbalancer service configured with Puppet
+  Keepalived service configured with Puppet
 
 parameters:
   EndpointMap:
@@ -12,7 +12,7 @@ parameters:
 
 outputs:
   role_data:
-    description: Role data for the Loadbalancer role.
+    description: Role data for the Keepalived role.
     value:
       step_config: |
-        include ::tripleo::profile::base::loadbalancer
+        include ::tripleo::profile::base::keepalived
