--- a/puppet/services/pacemaker/haproxy.yaml
+++ b/puppet/services/pacemaker/haproxy.yaml
@@ -1,7 +1,7 @@
 heat_template_version: 2016-04-08
 
 description: >
-  Loadbalancer service with Pacemaker configured with Puppet
+  HAproxy service with Pacemaker configured with Puppet
 
 parameters:
   EndpointMap:
@@ -12,19 +12,19 @@ parameters:
 
 resources:
   LoadbalancerServiceBase:
-    type: ../loadbalancer.yaml
+    type: ../haproxy.yaml
     properties:
       EndpointMap: {get_param: EndpointMap}
 
 outputs:
   role_data:
-    description: Role data for the Loadbalancer pacemaker role.
+    description: Role data for the HAproxy with pacemaker role.
     value:
       config_settings:
         map_merge:
           - get_attr: [LoadbalancerServiceBase, role_data, config_settings]
           - tripleo::haproxy::haproxy_service_manage: false
             tripleo::haproxy::mysql_clustercheck: true
-            tripleo::haproxy::keepalived: false
+            enable_keepalived: false
       step_config: |
-        include ::tripleo::profile::pacemaker::loadbalancer
+        include ::tripleo::profile::pacemaker::haproxy
