Enable nova-conductor as a composable service
Implement NovaConductor service using nova-base for common parameters.

* Move rabbitmq parameters from controller.yaml to nova-base service, as
  an example. More parameters will move in the future.
* Move nova-conductor bits from monolithic manifests to the new service
  using new profiles from puppet-tripleo.

Depends-On: Iaaf3a3c2528d9747e41f360a1fe55f95ed37b2d1
Implements: blueprint composable-services-within-roles

Change-Id: I178f092b74ae12f2cb6f006db7cb00e4d6bddfd8

--- a/environments/puppet-pacemaker.yaml
+++ b/environments/puppet-pacemaker.yaml
@@ -26,3 +26,4 @@ resource_registry:
   OS::TripleO::Services::Loadbalancer: ../puppet/services/pacemaker/loadbalancer.yaml
   OS::TripleO::Services::Memcached: ../puppet/services/pacemaker/memcached.yaml
   OS::TripleO::Services::Redis: ../puppet/services/pacemaker/database/redis.yaml
+  OS::TripleO::Services::NovaConductor: ../puppet/services/pacemaker/nova-conductor.yaml
