--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -142,6 +142,7 @@ resource_registry:
   OS::TripleO::Services::SaharaApi: puppet/services/sahara-api.yaml
   OS::TripleO::Services::SaharaEngine: puppet/services/sahara-engine.yaml
   OS::TripleO::Services::Redis: puppet/services/database/redis.yaml
+  OS::TripleO::Services::NovaConductor: puppet/services/nova-conductor.yaml
 
 parameter_defaults:
   EnablePackageInstall: false
