--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -641,6 +641,7 @@ parameters:
       - OS::TripleO::Services::Memcached
       - OS::TripleO::Services::SwiftProxy
       - OS::TripleO::Services::Redis
+      - OS::TripleO::Services::NovaConductor
     description: A list of service resources (configured in the Heat
                  resource_registry) which represent nested stacks
                  for each service that should get installed on the Controllers.
