--- a/puppet/all-nodes-config.yaml
+++ b/puppet/all-nodes-config.yaml
@@ -58,7 +58,10 @@ parameters:
     type: comma_delimited_list
   ironic_api_node_ips:
     type: comma_delimited_list
-
+  ceph_mon_node_ips:
+    type: comma_delimited_list
+  ceph_mon_node_names:
+    type: comma_delimited_list
   DeployIdentifier:
     type: string
     description: >
@@ -305,6 +308,22 @@ resources:
                         - "','"
                         - {get_param: ironic_api_node_ips}
 
+                tripleo::profile::base::ceph::ceph_mon_initial_members:
+                  list_join:
+                  - ','
+                  - {get_param: ceph_mon_node_names}
+                tripleo::profile::base::ceph::ceph_mon_host:
+                  list_join:
+                  - ','
+                  - {get_param: ceph_mon_node_ips}
+                tripleo::profile::base::ceph::ceph_mon_host_v6:
+                  str_replace:
+                    template: "'[IPS_LIST]'"
+                    params:
+                      IPS_LIST:
+                        list_join:
+                        - '],['
+                        - {get_param: ceph_mon_node_ips}
                 # NOTE(gfidente): interpolation with %{} in the
                 # hieradata file can't be used as it returns string
                 ceilometer::rabbit_hosts: *rabbit_nodes_array
