--- a/puppet/ceph-storage.yaml
+++ b/puppet/ceph-storage.yaml
@@ -243,6 +243,7 @@ resources:
             - service_configs
             - ceph_cluster # provided by CephClusterConfig
             - ceph
+            - all_nodes # provided by allNodesConfig
             - '"%{::osfamily}"'
             - common
             - network
