--- a/environments/puppet-ceph-devel.yaml
+++ b/environments/puppet-ceph-devel.yaml
@@ -1,6 +1,11 @@
 # A Heat environment file which can be used to enable a Ceph
 # storage cluster using the controller and ceph nodes.
 # Rbd backends are enabled for Cinder, Glance, Gnocchi and Nova.
+resource_registry:
+  OS::TripleO::Services::CephMon: ../puppet/services/ceph-mon.yaml
+  OS::TripleO::Services::CephOSD: ../puppet/services/ceph-osd.yaml
+  OS::TripleO::Services::CephClient: ../puppet/services/ceph-client.yaml
+
 parameter_defaults:
   #NOTE: These ID's and keys should be regenerated for
   # a production deployment. What is here is suitable for
@@ -13,4 +18,3 @@ parameter_defaults:
   GlanceBackend: rbd
   GnocchiBackend: rbd
   CinderEnableIscsiBackend: false
-  ControllerEnableCephStorage: true
