--- a/environments/puppet-ceph-external.yaml
+++ b/environments/puppet-ceph-external.yaml
@@ -1,7 +1,7 @@
 # A Heat environment file which can be used to enable the
 # use of an externally managed Ceph cluster.
 resource_registry:
-  OS::TripleO::CephClusterConfig::SoftwareConfig: ../puppet/extraconfig/ceph/ceph-external-config.yaml
+  OS::TripleO::Services::CephExternal: ../puppet/services/ceph-external.yaml
 
 parameter_defaults:
   # NOTE: These example parameters are required when using Ceph External
