Enable nova-api as a composable service
Implement NovaApi service using nova-base for common parameters.

Change-Id: Ibcb89b332ab73f18d05e5b2e454964e322b982e6
Implements: blueprint composable-services-within-roles
Depends-On: I1dde63a5a7d1624494a7157a9679f88f4cb780e0

--- a/environments/puppet-pacemaker.yaml
+++ b/environments/puppet-pacemaker.yaml
@@ -31,3 +31,4 @@ resource_registry:
   OS::TripleO::Services::Redis: ../puppet/services/pacemaker/database/redis.yaml
   OS::TripleO::Services::NovaConductor: ../puppet/services/pacemaker/nova-conductor.yaml
   OS::TripleO::Services::MongoDb: ../puppet/services/pacemaker/database/mongodb.yaml
+  OS::TripleO::Services::NovaApi: ../puppet/services/pacemaker/nova-api.yaml
