--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -590,6 +590,7 @@ parameters:
       - OS::TripleO::Services::Redis
       - OS::TripleO::Services::NovaConductor
       - OS::TripleO::Services::MongoDb
+      - OS::TripleO::Services::NovaApi
     description: A list of service resources (configured in the Heat
                  resource_registry) which represent nested stacks
                  for each service that should get installed on the Controllers.
