Enable nova-scheduler as a composable service
Implement NovaScheduler service using nova-base for common parameters.

Depends-On: I5e1c90e3c6dc556f872ced73744c5c74caaa3635
Change-Id: Ie50716a09c53d656835b16991128c94b35cf1ed2
Implements: blueprint composable-services-within-roles

--- a/environments/puppet-pacemaker.yaml
+++ b/environments/puppet-pacemaker.yaml
@@ -32,3 +32,4 @@ resource_registry:
   OS::TripleO::Services::NovaConductor: ../puppet/services/pacemaker/nova-conductor.yaml
   OS::TripleO::Services::MongoDb: ../puppet/services/pacemaker/database/mongodb.yaml
   OS::TripleO::Services::NovaApi: ../puppet/services/pacemaker/nova-api.yaml
+  OS::TripleO::Services::NovaScheduler: ../puppet/services/pacemaker/nova-scheduler.yaml
