--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -591,6 +591,7 @@ parameters:
       - OS::TripleO::Services::NovaConductor
       - OS::TripleO::Services::MongoDb
       - OS::TripleO::Services::NovaApi
+      - OS::TripleO::Services::NovaScheduler
     description: A list of service resources (configured in the Heat
                  resource_registry) which represent nested stacks
                  for each service that should get installed on the Controllers.
