Enable nova-consoleauth as a composable service
Implement NovaConsoleauth service using nova-base for common
meters.

Depends-On: I955b4fc07dc07d8adc32411848e3e131d77a5123
Implements: blueprint composable-services-within-roles
Change-Id: I7248f9c0a7a575675a2c2551ca9f8f51290a6656

--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -150,6 +150,7 @@ resource_registry:
   OS::TripleO::Services::MongoDb: puppet/services/database/mongodb.yaml
   OS::TripleO::Services::NovaApi: puppet/services/nova-api.yaml
   OS::TripleO::Services::NovaScheduler: puppet/services/nova-scheduler.yaml
+  OS::TripleO::Services::NovaConsoleauth: puppet/services/nova-consoleauth.yaml
 
 parameter_defaults:
   EnablePackageInstall: false
