--- a/environments/puppet-pacemaker.yaml
+++ b/environments/puppet-pacemaker.yaml
@@ -33,3 +33,4 @@ resource_registry:
   OS::TripleO::Services::MongoDb: ../puppet/services/pacemaker/database/mongodb.yaml
   OS::TripleO::Services::NovaApi: ../puppet/services/pacemaker/nova-api.yaml
   OS::TripleO::Services::NovaScheduler: ../puppet/services/pacemaker/nova-scheduler.yaml
+  OS::TripleO::Services::NovaConsoleauth: ../puppet/services/pacemaker/nova-consoleauth.yaml
