--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -592,6 +592,7 @@ parameters:
       - OS::TripleO::Services::MongoDb
       - OS::TripleO::Services::NovaApi
       - OS::TripleO::Services::NovaScheduler
+      - OS::TripleO::Services::NovaConsoleauth
     description: A list of service resources (configured in the Heat
                  resource_registry) which represent nested stacks
                  for each service that should get installed on the Controllers.
