Enable nova-vncproxy as a composable service
Implement NovaVncproxy service using nova-base for common
meters.

Change-Id: I6463cad5aa722d8c8febac1414d03637d6daec37
Depends-On: I5bc2a77b5832706bd9167cf40e5a7e0f95d7b346
Implements: blueprint composable-services-within-roles

--- a/environments/puppet-pacemaker.yaml
+++ b/environments/puppet-pacemaker.yaml
@@ -34,3 +34,4 @@ resource_registry:
   OS::TripleO::Services::NovaApi: ../puppet/services/pacemaker/nova-api.yaml
   OS::TripleO::Services::NovaScheduler: ../puppet/services/pacemaker/nova-scheduler.yaml
   OS::TripleO::Services::NovaConsoleauth: ../puppet/services/pacemaker/nova-consoleauth.yaml
+  OS::TripleO::Services::NovaVncproxy: ../puppet/services/pacemaker/nova-vncproxy.yaml
