--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -151,6 +151,7 @@ resource_registry:
   OS::TripleO::Services::NovaApi: puppet/services/nova-api.yaml
   OS::TripleO::Services::NovaScheduler: puppet/services/nova-scheduler.yaml
   OS::TripleO::Services::NovaConsoleauth: puppet/services/nova-consoleauth.yaml
+  OS::TripleO::Services::NovaVncproxy: puppet/services/nova-vncproxy.yaml
 
 parameter_defaults:
   EnablePackageInstall: false
