Add coordination url to gnocchi
Closes-Bug: #1590087

Depends-On: 7e91fb83226f658a61cacaeda9b51ffaeda788ef

Change-Id: I47623b706393ff6db7d4f7e54f87d75175296102

--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -1653,6 +1653,7 @@ resources:
                 gnocchi::db::mysql::password: {get_input: gnocchi_password}
                 gnocchi::storage::swift::swift_authurl: {get_input: keystone_auth_uri}
                 gnocchi::storage::swift::swift_key: {get_input: gnocchi_password}
+                gnocchi::storage::coordination_url: {get_input: ceilometer_coordination_url}
 
                 # Nova
                 nova::rabbit_userid: {get_input: rabbit_username}
