Move Neutron core and service plugin to base
Move the settings/parameters for the neutron core plugin and
neutron service plugins into the base role.

Partially-implements: blueprint composable-services-within-roles

Change-Id: Ieb307fa7bc5ecfbc500787e3f292488476f7d850

--- a/puppet/services/neutron-base.yaml
+++ b/puppet/services/neutron-base.yaml
@@ -26,6 +26,18 @@ parameters:
     type: number
     default: 3
     description: The number of neutron dhcp agents to schedule per network
+  NeutronCorePlugin:
+    default: 'ml2'
+    description: |
+        The core plugin for Neutron. The value should be the entrypoint to be loaded
+        from neutron.core_plugins namespace.
+    type: string
+  NeutronServicePlugins:
+    default: "router,qos"
+    description: |
+        Comma-separated list of service plugin entrypoints to be loaded from the
+        neutron.service_plugins namespace.
+    type: comma_delimited_list
   Debug:
     type: string
     default: ''
@@ -41,4 +53,10 @@ outputs:
         neutron::rabbit_use_ssl: {get_param: RabbitClientUseSSL}
         neutron::rabbit_port: {get_param: RabbitClientPort}
         neutron::dhcp_agents_per_network: {get_param: NeutronDhcpAgentsPerNetwork}
+        neutron::core_plugin: {get_param: NeutronCorePlugin}
+        neutron::service_plugins:
+          str_replace:
+            template: PLUGINS
+            params:
+              PLUGINS: {get_param: NeutronServicePlugins}
         neutron::debug: {get_param: Debug}
